--- a/frontend/src/styles/AncetaPage.css
+++ b/frontend/src/styles/AncetaPage.css
@@ -1,10 +1,78 @@
 .anceta-card-wrapper {
-    width: 100%;
-    background-color: #006f36;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 2rem;
+    max-width: 800px;
+    margin: 2rem auto;
 }
+
+.anceta-header h1 {
+    color: #2d3748;
+    font-size: 2rem;
+    margin: 0;
+}
+.anceta-form {
+    margin-top: 2rem;
+    padding: 2rem;
+    gap: 1.5rem;
+    margin-bottom: 1.5rem;
+
+}
+.anceta-form label {
+    color: #718096;
+    font-size: 0.9rem;
+    font-weight: bold;
+    display: block;
+    margin-bottom: 0.5rem;
+}
+.anceta-form input {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.anceta-form textarea {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+}
+.anceta-form button {
+    padding: 0.5rem 1rem;
+    background: #4a90e2;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.2s;
+    transform: scale(1);
+    margin-top: 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    display: block;
+    width: 100%;
+    margin-bottom: 1rem;
+}
+.anceta-form button:hover {
+    background: #357abd;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.2s;
+    transform: scale(1.01);
+}
+.anceta-form button:disabled {
+    background: #f7fafc;
+    color: #718096;
+    border: none;
+    border-radius: 5px;
+    cursor: not-allowed;
+}
+.anceta-form h2{
+    color: #2d3748;
+    font-size: 2rem;
+    margin: auto;
+}
+
+
