--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,15 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
 
 
 body {
     margin: 0;
-    /* font-family: Arial, sans-serif; */
-    background-color: #f5f5f5;
+    font-family: 'Montserrat', 'Inter', sans-serif;
+    background-color: #1c1c1d;
   }
 
   .app-container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+      background-color: #1c1c1d;
   }
 
   .content {
