--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -60,8 +60,7 @@
 }
 
 .nav-link:hover {
-  background: rgba(255, 255, 255, 0.1);
-  transform: translateY(-2px);
+  background: rgba(76, 76, 76, 0.1);
 }
 
 .auth-buttons {
@@ -72,6 +71,9 @@
 .nav-link.login {
   background: rgba(255, 255, 255, 0.1);
 }
+.nav-link.login:hover {
+  background: rgba(76, 76, 76, 0.1);
+}
 
 .nav-link.register {
   background: #ff8a1d;
@@ -79,7 +81,7 @@
 }
 
 .nav-link.register:hover {
-  background: rgba(255, 241, 226, 0.9);
+  background: rgba(255, 191, 126, 0.9);
   transform: translateY(-2px);
 }
 
@@ -160,7 +162,6 @@
 }
 
 .search-button {
-  background: none;
   border: none;
   padding: 10px 15px;
   cursor: pointer;
@@ -173,7 +174,9 @@
   height: 10%;
   font-size: 15px;
 }
-
+.search-button:hover {
+  background: rgba(76, 76, 76, 0.1) !important;
+}
 
 .search-icon {
   font-size: 16px;
@@ -268,6 +271,12 @@
 
 .nav-link.active {
   position: relative;
+  display: flex;
+  justify-content: center;
+  font-size: 15px;
+}
+.nav-link.active:hover{
+background: rgba(76, 76, 76, 0.1) !important;
 }
 
 .nav-link.active::after {
