--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -9,6 +9,7 @@
   top: -5px;
   z-index: 1000;
   font-size: 15px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .nav-brand {
@@ -108,59 +109,12 @@
 }
 
 .search-container {
-  flex: 2;
   display: flex;
   justify-content: center;
-  padding: 0 20px;
 }
 
-.search-box {
-  display: flex;
-  align-items: center;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 25px;
-  padding: 5px;
-  width: 100%;
-  max-width: 400px;
-  transition: all 0.3s ease;
-}
 
-.search-box:focus-within {
-  background: rgba(255, 255, 255, 0.15);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
 
-.search-input {
-  flex: 1;
-  background: none;
-  border: none;
-  padding: 8px 15px;
-  font-size: 14px;
-  color: #222020;
-  outline: none;
-  width: 100%;
-}
-
-.search-input::placeholder {
-  color: #8d8d8d;
-}
-
-.search-button {
-  border: none;
-  padding: 10px 15px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #222020;
-  transition: all 0.3s ease;
-  width: 10%;
-  height: 10%;
-  font-size: 15px;
-}
-.search-button:hover {
-  background: rgba(76, 76, 76, 0.1) !important;
-}
 
 .search-icon {
   font-size: 16px;
@@ -178,11 +132,6 @@
     margin-bottom: 10px;
   }
 
-  .search-container {
-    order: 3;
-    width: 100%;
-    padding: 10px 0;
-  }
 
   .nav-links {
     order: 2;
@@ -198,50 +147,6 @@
 }
 
 
-.search-section {
-  margin-bottom: 20px;
-  background-color: #fff;
-  border-radius: 15px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.search-section h2 {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #000000;
-  font-size: 40px;
-}
-
-.search-links {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-}
-
-.search-link {
-  text-decoration: none;
-  color: inherit;
-  flex: 1;
-  max-width: 400px;
-}
-
-.search-card {
-  background: #f2f2f2;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  text-align: center;
-}
-
-.search-card h3 {
-  color: #3a3939;
-  font-size: 24px;
-}
-
-.search-card p {
-  margin: 0;
-  color: #a7a7a7;
-}
 
 @media (max-width: 768px) {
   .search-links {
@@ -410,9 +315,8 @@ background: rgba(76, 76, 76, 0.1) !important;
 
 .search-dropdown {
   position: absolute;
-  top: 100%;
-  left: 50%;
-  transform: translateX(-50%);
+  top: 130%;
+  transform: translateX(0);
   background: white;
   border: 1px solid #ddd;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
