--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -8,14 +8,12 @@
   position: sticky;
   top: -5px;
   z-index: 1000;
-  font-size: 15px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .nav-brand {
   flex: 1;
   display: flex;
-  align-items: center;
   gap: 10px;
 }
 
@@ -39,8 +37,7 @@
 .nav-links {
   flex: 1;
   display: flex;
-  justify-content: flex-end;
-  gap: 1rem;
+  justify-content: center;
 }
 
 .nav-auth {
@@ -48,7 +45,6 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 1rem;
 }
 
 .nav-link {
@@ -57,7 +53,6 @@
   padding: 0.5rem 1rem;
   border-radius: 8px;
   transition: all 0.3s ease;
-  font-weight: 400;
 }
 
 .nav-link:hover {
@@ -93,34 +88,11 @@
   text-decoration: none;
 }
 
-.user-email.active {
-  position: relative;
-}
-
-.user-email.active::after {
-  content: '';
-  position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: #ff8a1d;
-  animation: underline 0.3s ease;
-}
-
 .search-container {
   display: flex;
   justify-content: center;
 }
 
-
-
-
-.search-icon {
-  font-size: 16px;
-}
-
-/* Responsive Design */
 @media (max-width: 768px) {
   .navbar {
     flex-wrap: wrap;
@@ -148,34 +120,24 @@
 
 
 
-@media (max-width: 768px) {
-  .search-links {
-    flex-direction: column;
-  }
-
-  .search-link {
-    width: 100%;
-  }
-}
 
 .nav-link.active {
   position: relative;
-  display: flex;
   justify-content: center;
   font-size: 15px;
 }
 .nav-link.active:hover{
-background: rgba(76, 76, 76, 0.1) !important;
+background: rgba(76, 76, 76, 0.1);
 }
 
 .nav-link.active::after {
   content: '';
   position: absolute;
-  bottom: -2px;
+  bottom: -10px;
   left: 0;
   width: 100%;
-  height: 2px;
-  background-color: #ff8a1d;
+  height: 3px;
+  background-color: #6b6b6b;
   animation: underline 0.3s ease;
 }
 
@@ -260,7 +222,7 @@ background: rgba(76, 76, 76, 0.1) !important;
 
 .notification-dropdown {
   position: absolute;
-  top: 50px;
+  top: 70px;
   right: 50px;
   background: white;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -298,16 +260,6 @@ background: rgba(76, 76, 76, 0.1) !important;
   padding: 10px;
 }
 
-.notification-indicator {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  width: 10px;
-  height: 10px;
-  background: red;
-  border-radius: 50%;
-}
-
 .search-container {
   position: relative;
   width: 10%;
@@ -337,4 +289,8 @@ background: rgba(76, 76, 76, 0.1) !important;
 
 .search-option:hover {
   background: #f0f0f0;
+}
+.search-container:hover {
+  border-radius: 8px;
+  background: rgba(76, 76, 76, 0.1);
 }
