--- a/frontend/src/styles/ProfilePage.css
+++ b/frontend/src/styles/ProfilePage.css
@@ -4,15 +4,14 @@
   padding: 0 1rem;
 }
 
-.profile-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 2rem;
-}
 
 .profile-content label{
-  display: block;
+  display: flex;
+  margin-top: 10px;
+}
+
+.profile-content h3{
+  margin-top:10px;
 }
 .profile-header h1 {
   color: #2d3748;
