--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -181,11 +181,16 @@ background: rgba(76, 76, 76, 0.1);
 
 .dropdown-item {
   display: block;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
   color: black;
   text-decoration: none;
   border-bottom: 1px solid #eee;
+  border-radius: 15px;
+}
+.dropdown-item:hover {
+  background-color: #eee;
+  transition: background-color 0.5s ease;
 }
 
 .dropdown-item:last-child {
@@ -207,6 +212,21 @@ background: rgba(76, 76, 76, 0.1);
   cursor: pointer;
   position: relative;
   margin-right: 15px;
+}
+
+
+.connections-dropdown {
+  position: absolute;
+  top: 70px;
+  right: 200px;
+  background: white;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 10px;
+  width: 250px;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
 }
 
 .notification-icon {
