--- a/frontend/src/styles/addListingPage.css
+++ b/frontend/src/styles/addListingPage.css
@@ -4,6 +4,24 @@
     margin: 0 auto;
   }
 
+  .link-owner{
+    text-decoration: none;
+    cursor: pointer;
+    color: black;
+    padding: 7px;
+    border-radius: 7px;
+  }
+  .link-owner:hover{
+    background-color: #eee;
+    transition: background-color 0.5s ease;
+  }
+  .team-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    border-bottom: 1px solid gray;
+  }
 
 .join-button {
   background: #3b82f6;
@@ -139,17 +157,22 @@
 .team-members,
 .all-teams {
   list-style: none;
-  padding: 0;
-  margin-top: 10px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .team-member,
-.all-teams li {
-  background: #eeeeee;
-  padding: 10px;
-  margin: 5px 0;
+.team-member-link{
+  text-decoration: none;
+  color: black;
+  margin: 1px 15px;
   border-radius: 8px;
   transition: background 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  background: #efefef;
+  padding: 5px;
 }
 
 
