--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -228,6 +228,9 @@ background: rgba(76, 76, 76, 0.1);
   display: flex;
   flex-direction: column;
 }
+.connections-dropdown:hover {
+  transition: width 1s ease;
+}
 
 .notification-icon {
   width: 30px;
