--- a/frontend/src/styles/addListingPage.css
+++ b/frontend/src/styles/addListingPage.css
@@ -23,6 +23,7 @@
   border-bottom: 1px solid gray;
 }
 
+
 .join-button {
 background: #3b82f6;
 color: white;
@@ -159,7 +160,13 @@ text-align: left;
 list-style: none;
 padding: 10px;
 display: flex;
+  flex-direction: column;
+  margin-top: 20px;
 justify-content: center;
+}
+.team-members{
+  flex-direction: row;
+
 }
 
 .team-member,
