--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -213,7 +213,26 @@ background: rgba(76, 76, 76, 0.1);
   position: relative;
   margin-right: 15px;
 }
+.notification-icon-container {
+  position: relative;
+  display: inline-block;
+}
 
+.notification-badge {
+  position: absolute;
+  bottom: -3px;
+  right: -3px;
+  width: 12px;
+  height: 12px;
+  background-color: #ff4d4f;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+}
+
+.notif-separator{
+  border-bottom: 1px solid #eee;
+  width: 100%;
+}
 
 .connections-dropdown {
   position: absolute;
